[gd_scene load_steps=11 format=3 uid="uid://btqs2fbbcdjua"]

[ext_resource type="Script" path="res://Scenes/Hud/hud.gd" id="1_2h2pb"]
[ext_resource type="Texture2D" uid="uid://ca5cufdou0e2j" path="res://Sprites/Hud/hud_cicle.png" id="1_axtf4"]
[ext_resource type="Theme" uid="uid://c7w67s3yqs8tp" path="res://Fonts&Themes/main_theme.tres" id="3_0j7dk"]
[ext_resource type="StyleBox" uid="uid://12fsl2f5rp3e" path="res://Fonts&Themes/button.tres" id="4_0iifc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgypi"]
bg_color = Color(0, 0.0901961, 0.121569, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.937255, 0.945098, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yofy6"]
bg_color = Color(1, 0.607843, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.937255, 0.945098, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srwmg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3p88j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16rr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n41t3"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2h2pb")

[node name="Hight" type="TextureRect" parent="."]
offset_left = 699.0
offset_top = 406.0
offset_right = 799.0
offset_bottom = 506.0
texture = ExtResource("1_axtf4")

[node name="Hight" type="Label" parent="Hight"]
layout_mode = 0
offset_left = 26.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 0.607843, 0.258824, 1)
theme_override_font_sizes/font_size = 10
text = "hight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HightLabel" type="Label" parent="Hight"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.937255, 0.945098, 0.952941, 1)
theme_override_font_sizes/font_size = 28
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Meters" type="Label" parent="Hight"]
layout_mode = 0
offset_left = 31.0
offset_top = 71.0
offset_right = 71.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(0.937255, 0.945098, 0.952941, 1)
text = "m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Velocity" type="TextureRect" parent="."]
offset_left = 700.0
offset_top = 500.0
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("1_axtf4")

[node name="Velocity" type="Label" parent="Velocity"]
layout_mode = 0
offset_left = 26.0
offset_top = 9.0
offset_right = 75.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 0.607843, 0.258824, 1)
theme_override_font_sizes/font_size = 10
text = "Velocity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VelocityLabel" type="Label" parent="Velocity"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.937255, 0.945098, 0.952941, 1)
theme_override_font_sizes/font_size = 28
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KPH" type="Label" parent="Velocity"]
layout_mode = 0
offset_left = 31.0
offset_top = 71.0
offset_right = 71.0
offset_bottom = 94.0
text = "KPH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeft" type="TextureRect" parent="."]
self_modulate = Color(1, 0, 0, 1)
offset_left = 700.0
offset_right = 800.0
offset_bottom = 100.0
texture = ExtResource("1_axtf4")

[node name="Label" type="Label" parent="TimeLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = 22.0
offset_right = 38.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="TimeLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.0
offset_right = 45.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "00.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeftLabel2" type="Label" parent="TimeLeft"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -51.0
offset_right = 45.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FuelBar" type="ProgressBar" parent="."]
offset_left = 652.0
offset_top = 410.0
offset_right = 702.0
offset_bottom = 596.0
theme_override_styles/background = SubResource("StyleBoxFlat_xgypi")
theme_override_styles/fill = SubResource("StyleBoxFlat_yofy6")
fill_mode = 3
show_percentage = false

[node name="Fuel" type="Label" parent="FuelBar"]
layout_mode = 0
offset_top = -2.0
offset_right = 50.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(1, 0.607843, 0.258824, 1)
theme_override_font_sizes/font_size = 10
text = "Fuel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameoverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -187.0
offset_right = 169.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0j7dk")

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -177.0
offset_right = 126.5
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.607843, 0.258824, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 46
text = "Time's Over"
horizontal_alignment = 1

[node name="Spacing" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
text = "

"

[node name="BodyLabel" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "amazing explosion hight"
horizontal_alignment = 1

[node name="Spacing2" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2

[node name="BodyLabel2" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reached hight:
"
horizontal_alignment = 1

[node name="ReachedHight" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "xx.xxx meters
"
horizontal_alignment = 1

[node name="Highscore" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.607843, 0.258824, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "new highscore!"
horizontal_alignment = 1

[node name="Spacing3" type="Label" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
text = "


"

[node name="HBoxContainer" type="HBoxContainer" parent="GameoverPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="TryAgain" type="Button" parent="GameoverPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_0iifc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_srwmg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3p88j")
text = "try again"

[node name="Menu" type="Button" parent="GameoverPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("4_0iifc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_16rr6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n41t3")
text = "menu"

[connection signal="pressed" from="GameoverPanel/VBoxContainer/HBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="GameoverPanel/VBoxContainer/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
